--- a/_base/templates/auths/login.html
+++ b/_base/templates/auths/login.html
@@ -1,10 +1,10 @@
-<p>Login html</p>
-
 <form
 class="registration-form"
-action="#"
+action="{% url 'login' %}"
 hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
+method="post"
 >
+    {% csrf_token %}
     <h1>Login</h1>
 
     <fieldset>
