--- a/_base/templates/auths/register.html
+++ b/_base/templates/auths/register.html
@@ -7,8 +7,18 @@
 </head>
 <body>
     {{role}}
-    <form action="#" method="post">
-        {{form}}
+    <form action="{% url 'finish_email_auth' %}?role={{role}}" method="post">
+        {% csrf_token %}
+        {% for field in form %}
+            {% if field.name != 'password2' %}
+                <div>
+                    {{ field.name}}
+                    {{ field }}
+                </div>
+            {% endif %}
+        {% endfor %}
+
+        <button>Register</button>
     </form>
 </body>
 </html>
