set up email auth for clients and creators, setting up add lodge for creators

--- a/_base/templates/auths/login.html
+++ b/_base/templates/auths/login.html
@@ -1,5 +1,6 @@
+<a href="/">home</a>
+
 <form
-class="registration-form"
 action="{% url 'login' %}"
 hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
 method="post"
