--- a/_base/templates/users/client.html
+++ b/_base/templates/users/client.html
@@ -1,1 +1,6 @@
-<p>Client Home</p>
+<p>Client Dashboard</p>
+
+<form action="{% url 'logout' %}" method="post">
+    {% csrf_token %}
+    <button>logout</button>
+</form>
