--- a/_base/templates/users/creator.html
+++ b/_base/templates/users/creator.html
@@ -4,3 +4,13 @@
     {% csrf_token %}
     <button>logout</button>
 </form>
+
+<h4 style="margin: 0;">Your Hostels</h4>
+{% for lodge in user.lodges.all %}
+    <div>
+        <a href="{% url 'get_lodge_profile' pk=lodge.pk %}">{{lodge.name}}</a>
+    </div>
+{% endfor %}
+<br>
+
+<a href="{% url 'register_lodge' %}">Register hostel</a>
