--- a/_base/templates/home.html
+++ b/_base/templates/home.html
@@ -1,12 +1,23 @@
 <h1>Home page</h1>
+{% if not user.is_authenticated %}
 <a href="{% url 'init_email_auth' %}">Account</a>
+{% elif user.role == 'CLIENT' %}
+<a href="{% url 'get_client' %}">Account</a>
+{% elif user.role == 'CREATOR' %}
+<a href="{% url 'get_creator' %}">Account</a>
+{% endif %}
 
 <h3>Select school to get started!</h3>
 <select name="schools" id="schools-dropdown">
-    <option value="None">------</option>
+    <option value="" disabled selected>schools</option>
 {% for school in schools %}
     <option value="{{school.abbr}}">{{school.name}}</option>
 {% endfor %}
 </select>
+<br><br>
 
-<h4>Select a region</h4>
+<div>
+    <select name="region-select" id="region-select" disabled="disabled">
+        <option value="">Select a school first</option>
+    </select>
+</div>
