setting up basic subscription filters and order summary logic

--- a/_base/templates/home.html
+++ b/_base/templates/home.html
@@ -18,6 +18,6 @@
 
 <div>
     <select name="region-select" id="region-select" disabled="disabled">
-        <option value="">Select a school first</option>
+        <option value="">regions</option>
     </select>
 </div>
