--- a/_base/templates/home.html
+++ b/_base/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block base %}
+{% block main %}
 <h1>Home page</h1>
 {% if not user.is_authenticated %}
 <a href="{% url 'init_email_auth' %}">Account</a>
@@ -12,7 +12,7 @@
 
 <h3>Select school to get started!</h3>
 
-<form action="#" method="post">
+<form action="{% url 'get_order_summary' %}" method="post">
     {% csrf_token %}
     <select
     name="schools"
