--- a/_base/templates/auths/login.html
+++ b/_base/templates/auths/login.html
@@ -1,3 +1,4 @@
+{% block main %}
 <a href="/">home</a>
 
 <form
@@ -16,3 +17,4 @@ method="post"
         Continue
     </button>
 </form>
+{% endblock %}
