modified subscribedlisting models (changed related name on creator)

--- a/_base/templates/auths/login.html
+++ b/_base/templates/auths/login.html
@@ -1,5 +1,7 @@
+{% extends 'base.html' %}
+
 {% block main %}
-<a href="/">home</a>
+<a href="{% get_home %}">home</a>
 
 <form
 action="{% url 'login' %}"
