--- a/_base/templates/base.html
+++ b/_base/templates/base.html
@@ -24,6 +24,8 @@
     <br>
     {% if not user.is_authenticated %}
     <a href="{% url 'init_email_auth' %}">Account</a>
+    <br>
+    <a href="{% url 'login' %}">Login</a>
     {% elif user.role == 'CLIENT' %}
     <a href="{% url 'get_client' %}">Account</a>
     {% elif user.role == 'CREATOR' %}
