--- a/_base/templates/listings/register-lodge.html
+++ b/_base/templates/listings/register-lodge.html
@@ -1,6 +1,10 @@
+{% extends 'base.html' %}
+
+{% block main %}
 <form action="{% url 'register_lodge' %}" method="post">
     {% csrf_token %}
     {{form}}
 
     <button>submit</button>
 </form>
+{% endblock %}
