--- a/_base/templates/users/creator.html
+++ b/_base/templates/users/creator.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% block main %}
 <p>Creator dashboard</p>
 
 <form action="{% url 'logout' %}" method="post">
@@ -19,3 +22,4 @@
 <br>
 
 <a href="{% url 'register_lodge' %}">Register hostel</a>
+{% endblock %}
