Refactored deployment script

--- a/_base/templates/users/creator.html
+++ b/_base/templates/users/creator.html
@@ -21,5 +21,6 @@
 {% endfor %}
 <br>
 
+<a href="{% url 'creator_transfer_info' %}">Save payment Information</a>
 <a href="{% url 'register_lodge' %}">Register hostel</a>
 {% endblock %}
