updating creator dashboard to show subscribed listings

--- a/_base/templates/users/creator.html
+++ b/_base/templates/users/creator.html
@@ -10,7 +10,7 @@
 
 <h4 style="margin: 0;">Client Subscribed Listings</h4>
 {% for listing in subscribed_listings %}
-    {{ listing.room_profile.room_type.name}} - {{ listing.room_profile.lodge.name }} - {{ listing.status.get_name_display }}
+    {{ listing.room_profile.room_type.get_name_display }} - {{ listing.room_profile.lodge.name }} - No of subscribed clients: {{ listing.room_profile.listing.subscribed_listings.count }}
 {% endfor %}
 
 <h4 style="margin: 0;">Your Hostels</h4>
