--- a/_base/templates/home.html
+++ b/_base/templates/home.html
@@ -33,13 +33,12 @@
 
         <div id="regions-checkboxes">
             <label>
-                <input type="checkbox" name="regions" value="#" disabled="disabled">
+                <i class="fa-solid fa-location-dot"></i>
                 <span style="color:lightslategray">Regions</span>
             </label>
         </div>
 
         <button id="proceed-btn" disabled>proceed</button>
-
     </form>
 </section>
 {% endblock %}
