--- a/_base/templates/base.html
+++ b/_base/templates/base.html
@@ -5,12 +5,14 @@
 <html lang="en">
 <head>
     <!-- common stylesheets -->
-     <link rel="stylesheet" hx-preserve="true" href="{% static 'core/styles/base.css' %}">
-     <link rel="stylesheet" hx-preserve="true" href="{% static 'core/styles/nav.css' %}">
+    <link rel="stylesheet" hx-preserve="true" href="{% static 'core/styles/base.css' %}">
+    <link rel="stylesheet" hx-preserve="true" href="{% static 'core/styles/nav.css' %}">
 
-     {% block page_stylesheets %}
+    <!-- install font awesome -->
+    <link hx-preserve="true" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-     {% endblock %}
+    {% block page_stylesheets %}
+    {% endblock %}
 
     <!-- htmx integration -->
     <script hx-preserve="true" src="{% static 'core/jsLibraries/htmx.min.js' %}" defer></script>
