--- a/_base/templates/home.html
+++ b/_base/templates/home.html
@@ -11,7 +11,7 @@
 {% block main %}
 <section id="hero">
     <div class="hero-heading-container">
-        <h1>Accommodations, Agents, Earnings and More...</h1>
+        <h1>Student Accommodations, Earnings and More...</h1>
     </div>
 
 
