--- a/_base/templates/base.html
+++ b/_base/templates/base.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" hx-preserve="true" href="{% static 'core/styles/base.css' %}">
     <link rel="stylesheet" hx-preserve="true" href="{% static 'core/styles/nav.css' %}">
 
+    <!-- common elements -->
+    <link rel="stylesheet" hx-preserve="true" href="{% static 'core/styles/elements/button-one.css' %}">
+
+
     <!-- install font awesome -->
     <link hx-preserve="true" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -35,7 +39,7 @@
 
     <div id="root-container">
         <nav class="nav">
-            <a href="{% url 'get_home' %}"><b>Upperoom</b></a>
+            <a href="{% url 'get_home' %}"><b>UppeRoom</b></a>
 
             <div class="nav-auth-container">
                 {% if not user.is_authenticated %}
