added return pop up modal for email verification

--- a/_base/core/static/core/styles/base.css
+++ b/_base/core/static/core/styles/base.css
@@ -11,6 +11,10 @@
     --transparent: transparent;
 
     --slimBoxShadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+
+
+    /* font sizes */
+    --smallFontSize: .8rem;
 }
 
 * {
@@ -36,6 +40,9 @@ fieldset {
 
 button {
     cursor: pointer;
+    background-color: var(--transparent);
+    border: none;
+    padding: 0;
 }
 
 /* end element resets */
