--- a/_base/templates/auths/register.html
+++ b/_base/templates/auths/register.html
@@ -1,18 +1,65 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block page_stylesheets %}
+    <link rel="stylesheet" href="{% static 'auths/styles/auths.css' %}">
+{% endblock %}
+
 
 {% block main %}
-{{role}}
-<form action="{% url 'finish_email_auth' %}?role={{role}}" method="post">
-    {% csrf_token %}
-    {% for field in form %}
-        {% if field.name != 'password2' %}
-            <div>
-                {{ field.name}}
-                {{ field }}
-            </div>
-        {% endif %}
-    {% endfor %}
+<div class="auths-container">
+    <form
+    id="register-form"
+    class="auths-form"
+    action="{% url 'finish_email_auth' %}?role={{role}}" method="post">
+        {% csrf_token %}
 
-    <button>Register</button>
-</form>
+        <h1>Setup Profile</h1>
+        <fieldset>
+            {% for field in form %}
+            {% if field.name != 'password2' and field.name != 'password1' %}
+                <div>
+                    <div class="input-field">
+                        <label for="{{ field.id_for_label }}">
+                            {% if field.name == 'email' %}
+                            <i class="fas fa-envelope"></i>
+                            {% elif field.name == 'first_name' %}
+                            <i class="fas fa-user"></i>
+                            {% elif field.name == 'last_name' %}
+                                <i class="fas fa-user-tag"></i>
+                            {% elif field.name == 'password1' %}
+                                <i class="fas fa-lock"></i>
+                            {% elif field.name == 'phone_number' %}
+                                <i class="fa-solid fa-phone"></i>
+                            {% endif %}
+                        </label>
+                        {{ field }}
+                    </div>
+                </div>
+            {% endif %}
+            {% endfor %}
+
+            <div x-data="{ show: false }" class="password-field-container">
+                <div class="input-field">
+                    <label for="{{ form.password1.id_for_label }}"><i class="fa-solid fa-lock"></i></label>
+                    <input :type="show ? 'text' : 'password'" id="{{ form.password.id_for_label }}" name="password1" placeholder="Password" class="input" />
+                </div>
+
+                <button class="toogle-visibility-button" type="button" @click="show = !show">
+                    <i :class="show ? 'fa-solid fa-eye-slash' : 'fa-solid fa-eye'"></i>
+                </button>
+            </div>
+        </fieldset>
+
+        <button type="submit">Submit</button>
+
+
+
+    </form>
+</div>
 {% endblock %}
+
+
+
+
+
